--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>NIMOS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bg-green">
     <div class="landing-page">
-        <div class="welcome-card">
+        <div class="glass-card">
             <h1>Selamat Datang di NIMOS</h1>
             <p>Sistem Pemantauan dan Observasi Non-Invasif</p>
             <div class="button-group">
@@ -19,7 +19,7 @@
     </div>
 
     <footer>
-        <p>Made with ❤️ by Arief</p>
+        <p>Made with ❤️ by Arief for Ikhwan</p>
     </footer>
 
     <script>
