--- a/step1.html
+++ b/step1.html
@@ -6,7 +6,7 @@
     <title>Step 1 - Pengambilan Gambar</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bg-green">
     <div class="step-container">
         <div class="glass-card">
             <h2>Langkah 1: Pengambilan Gambar</h2>
