--- a/results.html
+++ b/results.html
@@ -6,7 +6,7 @@
     <title>Hasil Deteksi Dini</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bg-green">
     <div class="results-container">
         <div class="glass-card">
             <h2>Hasil Deteksi Dini</h2>
