--- a/step2.html
+++ b/step2.html
@@ -6,7 +6,7 @@
     <title>Step 2 - Loading Analisis</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="bg-green">
     <div class="step-container">
         <div class="glass-card">
             <h2>Proses Analisis</h2>
