--- a/results.html
+++ b/results.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-green">
     <div class="results-container">
-        <div class="glass-card">
+        <div class="glass-card animate-fade-in">
             <h2>Hasil Deteksi Dini</h2>
 
             <div class="result-item">
@@ -29,19 +29,9 @@
                 <p class="analysis">Makna: Risiko diabetes tinggi. Disarankan untuk konsultasi ke dokter dan menjalani pola hidup sehat.</p>
             </div>
 
-            <div class="recommendations">
-                <h3>Rekomendasi</h3>
-                <ul>
-                    <li>Perbanyak aktivitas fisik, seperti berjalan kaki setiap hari.</li>
-                    <li>Tingkatkan kualitas tidur dengan menjaga rutinitas tidur yang konsisten.</li>
-                    <li>Kurangi konsumsi gula dan makanan tinggi karbohidrat sederhana.</li>
-                    <li>Segera jadwalkan konsultasi dengan dokter.</li>
-                </ul>
-            </div>
-
             <div class="button-group">
-                <button class="restart-button" onclick="restartDetection()">Mulai Ulang</button>
-                <button class="home-button" onclick="goHome()">Kembali ke Beranda</button>
+                <button class="restart-button button-animated" onclick="restartDetection()">Mulai Ulang</button>
+                <button class="home-button button-animated" onclick="goHome()">Kembali ke Beranda</button>
             </div>
         </div>
     </div>
