--- a/step1.html
+++ b/step1.html
@@ -8,10 +8,10 @@
 </head>
 <body class="bg-green">
     <div class="step-container">
-        <div class="glass-card">
+        <div class="glass-card animate-slide-in">
             <h2>Langkah 1: Pengambilan Gambar</h2>
             <p>Silakan ambil gambar lipatan kulit Anda untuk analisis.</p>
-            <button class="camera-button" onclick="captureImage()">Ambil Gambar</button>
+            <button class="camera-button button-animated" onclick="captureImage()">Ambil Gambar</button>
             <div id="image-status" class="status-message hidden">
                 <p>Gambar berhasil diambil!</p>
             </div>
