--- a/step2.html
+++ b/step2.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-green">
     <div class="step-container">
-        <div class="glass-card">
+        <div class="glass-card animate-scale-up">
             <h2>Proses Analisis</h2>
             <div class="loader"></div>
             <p>Mohon tunggu, data Anda sedang diproses...</p>
