--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body class="bg-green">
     <div class="landing-page">
-        <div class="glass-card">
+        <div class="glass-card animate-fade-in">
             <h1>Selamat Datang di NIMOS</h1>
             <p>Sistem Pemantauan dan Observasi Non-Invasif</p>
             <div class="button-group">
-                <button class="login-button" onclick="login()">Login</button>
-                <button class="skip-button" onclick="startDetection()">Lewati & Mulai Deteksi Dini</button>
+                <button class="login-button button-animated" onclick="login()">Login</button>
+                <button class="skip-button button-animated" onclick="startDetection()">Lewati & Mulai Deteksi Dini</button>
             </div>
         </div>
     </div>
 
     <footer>
-        <p>Made with ❤️ by Arief for Ikhwan</p>
+        <p>Made with ❤️ by Arief</p>
     </footer>
 
     <script>
