--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>NIMOS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -19,7 +22,7 @@
     </div>
 
     <footer>
-        <p>Made with ❤️ by Arief</p>
+        <p>Made with ❤️ by Arief for Ikhwan</p>
     </footer>
 
     <script>
