--- a/step1.html
+++ b/step1.html
@@ -11,6 +11,7 @@
         <div class="glass-card animate-slide-in">
             <h2>Langkah 1: Pengambilan Gambar</h2>
             <p>Silakan ambil gambar lipatan kulit Anda untuk analisis.</p>
+            <img src="contohlipatanleher.png" alt="">
             <button class="camera-button button-animated" onclick="captureImage()">Ambil Gambar</button>
             <div id="image-status" class="status-message hidden">
                 <p>Gambar berhasil diambil!</p>
