--- a/results.html
+++ b/results.html
@@ -9,8 +9,43 @@
 <body class="bg-green">
     <div class="results-container">
         <div class="glass-card animate-fade-in">
-            <h2>Opsi Tindakan Anda</h2>
+            <h2>Hasil Analisis Anda</h2>
 
+            <!-- Analisis -->
+            <div class="analysis-row">
+                <!-- Aktivitas Fisik -->
+                <div class="result-item">
+                    <img src="icons/steps-icon.svg" alt="Langkah Harian" class="result-icon">
+                    <h3>Aktivitas Fisik</h3>
+                    <p>Anda telah mencapai <strong>4,500 langkah</strong> hari ini.</p>
+                    <p class="analysis">Sempurna untuk memulai, tetapi coba tingkatkan hingga <strong>7,000 langkah</strong> untuk kesehatan optimal!</p>
+                </div>
+
+                <!-- Kualitas Tidur -->
+                <div class="result-item">
+                    <img src="icons/sleep-icon.svg" alt="Kualitas Tidur" class="result-icon">
+                    <h3>Kualitas Tidur</h3>
+                    <p>Rata-rata tidur Anda: <strong>5 jam</strong> per malam.</p>
+                    <p class="analysis">Tidur cukup adalah kunci energi dan kesehatan. Usahakan tidur <strong>7-8 jam</strong> setiap malam.</p>
+                </div>
+
+                <!-- Lipatan Kulit -->
+                <div class="result-item">
+                    <img src="icons/skin-icon.svg" alt="Lipatan Kulit" class="result-icon">
+                    <h3>Lipatan Kulit</h3>
+                    <p>Analisis menunjukkan indikasi <strong>Acanthosis Nigricans</strong>.</p>
+                    <p class="analysis">Indikasi ini dapat menjadi tanda resistensi insulin. Konsultasikan dengan dokter untuk pemeriksaan lebih lanjut.</p>
+                </div>
+            </div>
+
+            <!-- Risiko Diabetes -->
+            <div class="diabetes-risk highlight">
+                <h3>Risiko Diabetes</h3>
+                <p>Hasil menunjukkan risiko diabetes sebesar <strong>85%</strong>.</p>
+            </div>
+
+            <!-- Opsi Tindakan -->
+            <h2>Opsi Tindakan Anda</h2>
             <div class="action-row">
                 <!-- Card 1: Pesan Glucometer -->
                 <div class="action-card">
@@ -36,6 +71,11 @@
                     <button class="card-button" onclick="contactTelemedicine()">Konsultasi Sekarang</button>
                 </div>
             </div>
+
+            <div class="button-group">
+                <button class="restart-button button-animated" onclick="restartDetection()">Mulai Ulang</button>
+                <button class="home-button button-animated" onclick="goHome()">Kembali ke Beranda</button>
+            </div>
         </div>
     </div>
 
@@ -44,6 +84,14 @@
     </footer>
 
     <script>
+        function restartDetection() {
+            window.location.href = "step1.html";
+        }
+
+        function goHome() {
+            window.location.href = "index.html";
+        }
+
         function orderGlucometer() {
             alert("Anda akan diarahkan ke halaman untuk memesan glucometer.");
         }
