--- a/results.html
+++ b/results.html
@@ -72,8 +72,11 @@
                 </div>
             </div>
 
+            <div>
+
+            </div>
+
             <div class="button-group">
-                <button class="restart-button button-animated" onclick="restartDetection()">Mulai Ulang</button>
                 <button class="home-button button-animated" onclick="goHome()">Kembali ke Beranda</button>
             </div>
         </div>
