--- a/results.html
+++ b/results.html
@@ -15,7 +15,7 @@
             <div class="analysis-row">
                 <!-- Aktivitas Fisik -->
                 <div class="result-item">
-                    <img src="icons/steps-icon.svg" alt="Langkah Harian" class="result-icon">
+                    <img src="2.png" alt="Langkah Harian" class="result-icon">
                     <h3>Aktivitas Fisik</h3>
                     <p>Anda telah mencapai <strong>4,500 langkah</strong> hari ini.</p>
                     <p class="analysis">Sempurna untuk memulai, tetapi coba tingkatkan hingga <strong>7,000 langkah</strong> untuk kesehatan optimal!</p>
@@ -23,7 +23,7 @@
 
                 <!-- Kualitas Tidur -->
                 <div class="result-item">
-                    <img src="icons/sleep-icon.svg" alt="Kualitas Tidur" class="result-icon">
+                    <img src="1.png" alt="Kualitas Tidur" class="result-icon">
                     <h3>Kualitas Tidur</h3>
                     <p>Rata-rata tidur Anda: <strong>5 jam</strong> per malam.</p>
                     <p class="analysis">Tidur cukup adalah kunci energi dan kesehatan. Usahakan tidur <strong>7-8 jam</strong> setiap malam.</p>
@@ -31,7 +31,7 @@
 
                 <!-- Lipatan Kulit -->
                 <div class="result-item">
-                    <img src="icons/skin-icon.svg" alt="Lipatan Kulit" class="result-icon">
+                    <img src="3.png" alt="Lipatan Kulit" class="result-icon">
                     <h3>Lipatan Kulit</h3>
                     <p>Analisis menunjukkan indikasi <strong>Acanthosis Nigricans</strong>.</p>
                     <p class="analysis">Indikasi ini dapat menjadi tanda resistensi insulin. Konsultasikan dengan dokter untuk pemeriksaan lebih lanjut.</p>
@@ -49,7 +49,7 @@
             <div class="action-row">
                 <!-- Card 1: Pesan Glucometer -->
                 <div class="action-card">
-                    <img src="icons/glucometer-icon.svg" alt="Pesan Glucometer" class="action-icon">
+                    <img src="4.png" alt="Pesan Glucometer" class="action-icon">
                     <h3>Pesan Glucometer</h3>
                     <p>Mulai pantau gula darah Anda dari rumah dengan glucometer.</p>
                     <button class="card-button" onclick="orderGlucometer()">Pesan Sekarang</button>
@@ -57,7 +57,7 @@
 
                 <!-- Card 2: Rekomendasi Faskes -->
                 <div class="action-card">
-                    <img src="icons/healthcare-icon.svg" alt="Rekomendasi Faskes" class="action-icon">
+                    <img src="5.png" alt="Rekomendasi Faskes" class="action-icon">
                     <h3>Rekomendasi Faskes</h3>
                     <p>Kunjungi fasilitas kesehatan terdekat untuk pemeriksaan lebih lanjut.</p>
                     <button class="card-button" onclick="findHealthcare()">Cari Faskes</button>
@@ -65,7 +65,7 @@
 
                 <!-- Card 3: Hubungi Telemedis -->
                 <div class="action-card">
-                    <img src="icons/telemedicine-icon.svg" alt="Hubungi Telemedis" class="action-icon">
+                    <img src="6.png" alt="Hubungi Telemedis" class="action-icon">
                     <h3>Hubungi Telemedis</h3>
                     <p>Dapatkan konsultasi langsung dengan tenaga medis secara online.</p>
                     <button class="card-button" onclick="contactTelemedicine()">Konsultasi Sekarang</button>
@@ -81,7 +81,7 @@
     </div>
 
     <footer>
-        <p>Made with ❤️ by Arief</p>
+        <p>Made with ❤️ for Ikhwan</p>
     </footer>
 
     <script>
