--- a/step1.html
+++ b/step1.html
@@ -20,7 +20,7 @@
     </div>
 
     <footer>
-        <p>Made with ❤️ by Arief</p>
+        <p>Made with ❤️ for Ikhwan</p>
     </footer>
 
     <script>
