--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <footer>
-        <p>Made with ❤️ by Arief for Ikhwan</p>
+        <p>Made with ❤️ for Ikhwan</p>
     </footer>
 
     <script>
