--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +10,16 @@
     <title>NIMOS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body class="bg-green">
     <div class="landing-page">
         <div class="glass-card animate-fade-in">
             <h1>Selamat Datang di NIMOS</h1>
-            <p>Sistem Pemantauan dan Observasi Non-Invasif</p>
+            <p>NIMOS () adalah Sistem Pemantauan dan Observasi Non-Invasif</p>
             <div class="button-group">
                 <button class="login-button button-animated" onclick="login()">Login</button>
-                <button class="skip-button button-animated" onclick="startDetection()">Lewati & Mulai Deteksi Dini</button>
+                <button class="skip-button button-animated" onclick="startDetection()">Lewati & Mulai Deteksi
+                    Dini</button>
             </div>
         </div>
     </div>
@@ -35,4 +38,5 @@
         }
     </script>
 </body>
+
 </html>
