--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="bg-green">
-    <div class="landing-page">
+<body>
+    <main class="bg-green">
         <div class="glass-card animate-fade-in">
-            <h1>Selamat Datang di NIMOS</h1>
-            <p>NIMOS () adalah Sistem Pemantauan dan Observasi Non-Invasif</p>
+            <h1>Selamat Datang di <span class="brand">NIMOS</span></h1>
+            <p class="subtitle">Sistem Pemantauan dan Observasi Non-Invasif</p>
             <div class="button-group">
-                <button class="login-button button-animated" onclick="login()">Login</button>
-                <button class="skip-button button-animated" onclick="startDetection()">Lewati & Mulai Deteksi
-                    Dini</button>
+                <button class="primary-btn" onclick="login()">Login</button>
+                <button class="secondary-btn" onclick="startDetection()">Lewati & Mulai Deteksi Dini</button>
             </div>
         </div>
-    </div>
+    </main>
 
     <footer>
-        <p>Made with ❤️ for Ikhwan</p>
+        <p>Made with ❤️ untuk Ikhwan</p>
     </footer>
 
     <script>
