--- a/results.html
+++ b/results.html
@@ -1,78 +1,68 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasil Deteksi Dini</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body class="bg-green">
     <div class="results-container">
         <div class="glass-card animate-fade-in">
             <h2>Hasil Analisis Anda</h2>
-
-            <!-- Analisis -->
             <div class="analysis-row">
-                <!-- Aktivitas Fisik -->
                 <div class="result-item">
                     <img src="2.png" alt="Langkah Harian" class="result-icon">
                     <h3>Aktivitas Fisik</h3>
                     <p>Anda telah mencapai <strong>4,500 langkah</strong> hari ini.</p>
-                    <p class="analysis">Sempurna untuk memulai, tetapi coba tingkatkan hingga <strong>7,000 langkah</strong> untuk kesehatan optimal!</p>
+                    <p class="analysis">Coba tingkatkan hingga <strong>7,000 langkah</strong> untuk kesehatan optimal!
+                    </p>
                 </div>
 
-                <!-- Kualitas Tidur -->
                 <div class="result-item">
                     <img src="1.png" alt="Kualitas Tidur" class="result-icon">
                     <h3>Kualitas Tidur</h3>
                     <p>Rata-rata tidur Anda: <strong>5 jam</strong> per malam.</p>
-                    <p class="analysis">Tidur cukup adalah kunci energi dan kesehatan. Usahakan tidur <strong>7-8 jam</strong> setiap malam.</p>
+                    <p class="analysis">Usahakan tidur <strong>7-8 jam</strong> setiap malam.</p>
                 </div>
 
-                <!-- Lipatan Kulit -->
                 <div class="result-item">
                     <img src="3.png" alt="Lipatan Kulit" class="result-icon">
                     <h3>Lipatan Kulit</h3>
                     <p>Analisis menunjukkan indikasi <strong>Acanthosis Nigricans</strong>.</p>
-                    <p class="analysis">Indikasi ini dapat menjadi tanda resistensi insulin. Konsultasikan dengan dokter untuk pemeriksaan lebih lanjut.</p>
+                    <p class="analysis">Konsultasikan dengan dokter untuk pemeriksaan lebih lanjut.</p>
                 </div>
             </div>
 
-            <!-- Risiko Diabetes -->
             <div class="diabetes-risk highlight">
                 <h3>Risiko Diabetes</h3>
                 <p>Hasil menunjukkan risiko diabetes sebesar <strong>85%</strong>.</p>
             </div>
 
-            <!-- Opsi Tindakan -->
-            <h2>Opsi Tindakan Anda</h2>
             <div class="action-row">
-                <!-- Card 1: Pesan Glucometer -->
                 <div class="action-card">
                     <img src="4.png" alt="Pesan Glucometer" class="action-icon">
                     <h3>Pesan Glucometer</h3>
-                    <p>Mulai pantau gula darah Anda dari rumah dengan glucometer.</p>
+                    <p>Mulai pantau gula darah Anda dari rumah.</p>
                     <button class="card-button" onclick="orderGlucometer()">Pesan Sekarang</button>
                 </div>
 
-                <!-- Card 2: Rekomendasi Faskes -->
                 <div class="action-card">
                     <img src="5.png" alt="Rekomendasi Faskes" class="action-icon">
                     <h3>Rekomendasi Faskes</h3>
-                    <p>Kunjungi fasilitas kesehatan terdekat untuk pemeriksaan lebih lanjut.</p>
+                    <p>Kunjungi fasilitas kesehatan terdekat.</p>
                     <button class="card-button" onclick="findHealthcare()">Cari Faskes</button>
                 </div>
 
-                <!-- Card 3: Hubungi Telemedis -->
                 <div class="action-card">
                     <img src="6.png" alt="Hubungi Telemedis" class="action-icon">
                     <h3>Hubungi Telemedis</h3>
-                    <p>Dapatkan konsultasi langsung dengan tenaga medis secara online.</p>
+                    <p>Dapatkan konsultasi langsung secara online.</p>
                     <button class="card-button" onclick="contactTelemedicine()">Konsultasi Sekarang</button>
                 </div>
             </div>
-
-            <br>
 
             <div class="button-group">
                 <button class="home-button button-animated" onclick="goHome()">Kembali ke Beranda</button>
@@ -81,29 +71,26 @@
     </div>
 
     <footer>
-        <p>Made with ❤️ for Ikhwan</p>
+        <p>Made with ❤️ untuk Ikhwan</p>
     </footer>
 
     <script>
-        function restartDetection() {
-            window.location.href = "step1.html";
-        }
-
         function goHome() {
             window.location.href = "index.html";
         }
 
         function orderGlucometer() {
-            alert("Anda akan diarahkan ke halaman untuk memesan glucometer.");
+            alert("Anda akan diarahkan ke halaman pemesanan.");
         }
 
         function findHealthcare() {
-            alert("Anda akan diarahkan ke daftar fasilitas kesehatan terdekat.");
+            alert("Anda akan diarahkan ke daftar fasilitas kesehatan.");
         }
 
         function contactTelemedicine() {
-            alert("Anda akan diarahkan ke layanan telemedis untuk konsultasi.");
+            alert("Anda akan diarahkan ke layanan telemedis.");
         }
     </script>
 </body>
+
 </html>
