NIMOS HUGE UPDATE! New Theme, New Flows

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="bg-green">
         <div class="glass-card animate-fade-in">
             <h1>Selamat Datang di <span class="brand">NIMOS</span></h1>
-            <p class="subtitle">Sistem Pemantauan dan Observasi Non-Invasif</p>
+            <p class="subtitle" style="text-align: left;">Sistem Pemantauan dan Observasi Non-Invasif</p>
             <div class="button-group">
                 <button class="primary-btn" onclick="login()">Login</button>
                 <button class="secondary-btn" onclick="startDetection()">Lewati & Mulai Deteksi Dini</button>
@@ -24,7 +24,7 @@
     </main>
 
     <footer>
-        <p>Made with ❤️ untuk Ikhwan</p>
+        <p>Made with ❤️</p>
     </footer>
 
     <script>
