--- a/results.html
+++ b/results.html
@@ -11,55 +11,60 @@
 <body class="bg-green">
     <div class="results-container">
         <div class="glass-card animate-fade-in">
-            <h2>Hasil Analisis Anda</h2>
+            <h2 style="text-align: center;">Hasil Analisis Anda</h2>
             <div class="analysis-row">
                 <div class="result-item">
                     <img src="2.png" alt="Langkah Harian" class="result-icon">
                     <h3>Aktivitas Fisik</h3>
-                    <p>Anda telah mencapai <strong>4,500 langkah</strong> hari ini.</p>
-                    <p class="analysis">Coba tingkatkan hingga <strong>7,000 langkah</strong> untuk kesehatan optimal!
-                    </p>
+                    <p style="text-align: center;">Anda telah mencapai <strong>4,500 langkah</strong> hari ini.</p>
+                    <p class="analysis" style="text-align: center;">Coba tingkatkan hingga <strong>7,000
+                            langkah</strong>
+                        untuk kesehatan optimal!</p>
                 </div>
 
                 <div class="result-item">
                     <img src="1.png" alt="Kualitas Tidur" class="result-icon">
                     <h3>Kualitas Tidur</h3>
-                    <p>Rata-rata tidur Anda: <strong>5 jam</strong> per malam.</p>
-                    <p class="analysis">Usahakan tidur <strong>7-8 jam</strong> setiap malam.</p>
+                    <p style="text-align: center;">Rata-rata tidur Anda: <strong>5 jam</strong> per malam.</p>
+                    <p class="analysis" style="text-align: center;">Usahakan tidur <strong>7-8 jam</strong> setiap
+                        malam.
+                    </p>
                 </div>
 
                 <div class="result-item">
                     <img src="3.png" alt="Lipatan Kulit" class="result-icon">
                     <h3>Lipatan Kulit</h3>
-                    <p>Analisis menunjukkan indikasi <strong>Acanthosis Nigricans</strong>.</p>
-                    <p class="analysis">Konsultasikan dengan dokter untuk pemeriksaan lebih lanjut.</p>
+                    <p style="text-align: center;">Analisis menunjukkan indikasi <strong>Acanthosis Nigricans</strong>.
+                    </p>
+                    <p class="analysis" style="text-align: center;">Konsultasikan dengan dokter untuk pemeriksaan lebih
+                        lanjut.</p>
                 </div>
             </div>
 
             <div class="diabetes-risk highlight">
                 <h3>Risiko Diabetes</h3>
-                <p>Hasil menunjukkan risiko diabetes sebesar <strong>85%</strong>.</p>
+                <p style="text-align: center;">Hasil menunjukkan risiko diabetes sebesar <strong>85%</strong>.</p>
             </div>
 
             <div class="action-row">
                 <div class="action-card">
                     <img src="4.png" alt="Pesan Glucometer" class="action-icon">
                     <h3>Pesan Glucometer</h3>
-                    <p>Mulai pantau gula darah Anda dari rumah.</p>
+                    <p style="text-align: center;">Mulai pantau gula darah Anda dari rumah.</p>
                     <button class="card-button" onclick="orderGlucometer()">Pesan Sekarang</button>
                 </div>
 
                 <div class="action-card">
                     <img src="5.png" alt="Rekomendasi Faskes" class="action-icon">
                     <h3>Rekomendasi Faskes</h3>
-                    <p>Kunjungi fasilitas kesehatan terdekat.</p>
+                    <p style="text-align: center;">Kunjungi fasilitas kesehatan terdekat.</p>
                     <button class="card-button" onclick="findHealthcare()">Cari Faskes</button>
                 </div>
 
                 <div class="action-card">
                     <img src="6.png" alt="Hubungi Telemedis" class="action-icon">
                     <h3>Hubungi Telemedis</h3>
-                    <p>Dapatkan konsultasi langsung secara online.</p>
+                    <p style="text-align: center;">Dapatkan konsultasi langsung secara online.</p>
                     <button class="card-button" onclick="contactTelemedicine()">Konsultasi Sekarang</button>
                 </div>
             </div>
@@ -71,7 +76,7 @@
     </div>
 
     <footer>
-        <p>Made with ❤️ untuk Ikhwan</p>
+        <p>Made with ❤️</p>
     </footer>
 
     <script>
