--- a/step2.html
+++ b/step2.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Step 2 - Loading Analisis</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-green">
+
+<body class="bg-green consistent-bg">
     <div class="step-container">
         <div class="glass-card animate-scale-up">
             <h2>Proses Analisis</h2>
             <div class="loader"></div>
-            <p>Mohon tunggu, data Anda sedang diproses...</p>
+            <p>Gambar diterima! memproses data...</p>
         </div>
     </div>
 
     <footer>
-        <p>Made with ❤️ for Ikhwan</p>
+        <p>Made with ❤️</p>
     </footer>
 
     <script>
@@ -25,4 +27,5 @@
         }, 3000);
     </script>
 </body>
+
 </html>
