--- a/results.html
+++ b/results.html
@@ -11,15 +11,14 @@
 <body class="bg-green">
     <div class="results-container">
         <div class="glass-card animate-fade-in">
-            <h2 style="text-align: center;">Hasil Analisis Anda</h2>
+            <h3 style="text-align: center;">Hasil Analisis Anda</h3>
             <div class="analysis-row">
                 <div class="result-item">
                     <img src="2.png" alt="Langkah Harian" class="result-icon">
                     <h3>Aktivitas Fisik</h3>
                     <p style="text-align: center;">Anda telah mencapai <strong>4,500 langkah</strong> hari ini.</p>
                     <p class="analysis" style="text-align: center;">Coba tingkatkan hingga <strong>7,000
-                            langkah</strong>
-                        untuk kesehatan optimal!</p>
+                            langkah</strong> untuk kesehatan optimal!</p>
                 </div>
 
                 <div class="result-item">
@@ -27,8 +26,7 @@
                     <h3>Kualitas Tidur</h3>
                     <p style="text-align: center;">Rata-rata tidur Anda: <strong>5 jam</strong> per malam.</p>
                     <p class="analysis" style="text-align: center;">Usahakan tidur <strong>7-8 jam</strong> setiap
-                        malam.
-                    </p>
+                        malam.</p>
                 </div>
 
                 <div class="result-item">
@@ -41,10 +39,12 @@
                 </div>
             </div>
 
-            <div class="diabetes-risk highlight">
-                <h3>Risiko Diabetes</h3>
+            <div class="diabetes-risk highlight animate-fade-in">
+                <h3 style="text-align: center;">Risiko Diabetes</h3>
                 <p style="text-align: center;">Hasil menunjukkan risiko diabetes sebesar <strong>85%</strong>.</p>
             </div>
+
+            <h3 style="text-align: center; margin-top: 2rem;">Rekomendasi</h3> <!-- Add "Rekomendasi" heading -->
 
             <div class="action-row">
                 <div class="action-card">
