--- a/results.html
+++ b/results.html
@@ -75,9 +75,7 @@
         </div>
     </div>
 
-    <footer>
-        <p>Made with ❤️ for Ikhwan</p>
-    </footer>
+    <footer></footer>
 
     <script>
         function goHome() {
