--- a/results.html
+++ b/results.html
@@ -16,17 +16,18 @@
                 <div class="result-item">
                     <img src="2.png" alt="Langkah Harian" class="result-icon">
                     <h3>Aktivitas Fisik</h3>
-                    <p style="text-align: center;">Anda telah mencapai <strong>4,500 langkah</strong> hari ini.</p>
-                    <p class="analysis" style="text-align: center;">Coba tingkatkan hingga <strong>7,000
-                            langkah</strong> untuk kesehatan optimal!</p>
+                    <p style="text-align: center;">Langkah harian Anda masih rendah, yaitu sekitar <strong>4,500 langkah
+                            per hari</strong>.</p>
+                    <p class="analysis" style="text-align: center;">Ayo tingkatkan hingga <strong>7,000
+                            langkah per hari</strong> untuk menurunkan risiko Diabetes!</p>
                 </div>
 
                 <div class="result-item">
                     <img src="1.png" alt="Kualitas Tidur" class="result-icon">
                     <h3>Kualitas Tidur</h3>
-                    <p style="text-align: center;">Rata-rata tidur Anda: <strong>5 jam</strong> per malam.</p>
-                    <p class="analysis" style="text-align: center;">Usahakan tidur <strong>7-8 jam</strong> setiap
-                        malam.</p>
+                    <p style="text-align: center;">Rata-rata tidur anda sekitar <strong>5 jam per malam</strong>.</p>
+                    <p class="analysis" style="text-align: center;">Mari usahakan tidur <strong>7-8 jam</strong> setiap
+                        malam untuk turunkan.</p>
                 </div>
 
                 <div class="result-item">
@@ -47,12 +48,6 @@
             <h3 style="text-align: center; margin-top: 2rem;">Rekomendasi</h3> <!-- Add "Rekomendasi" heading -->
 
             <div class="action-row">
-                <div class="action-card">
-                    <img src="4.png" alt="Pesan Glucometer" class="action-icon">
-                    <h3>Pesan Glucometer</h3>
-                    <p style="text-align: center;">Mulai pantau gula darah Anda dari rumah.</p>
-                    <button class="card-button" onclick="orderGlucometer()">Pesan Sekarang</button>
-                </div>
 
                 <div class="action-card">
                     <img src="5.png" alt="Rekomendasi Faskes" class="action-icon">
@@ -76,16 +71,11 @@
     </div>
 
     <footer>
-        <p>Made with ❤️ for Ikhwan</p>
     </footer>
 
     <script>
         function goHome() {
             window.location.href = "index.html";
-        }
-
-        function orderGlucometer() {
-            alert("Anda akan diarahkan ke halaman pemesanan.");
         }
 
         function findHealthcare() {
