--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Selamat Datang di <span class="brand">NIMOS</span></h1>
             <p class="subtitle" style="text-align: left;">Sistem Pemantauan dan Observasi Non-Invasif</p>
             <div class="button-group">
-                <button class="primary-btn" onclick="login()">Login</button>
+                <button class="primary-btn" onclick="fillPersonalData()">Isi Data Diri</button>
                 <button class="secondary-btn" onclick="startDetection()">Lewati & Mulai Deteksi Dini</button>
             </div>
         </div>
@@ -27,8 +27,8 @@
     </footer>
 
     <script>
-        function login() {
-            alert("Fitur login belum tersedia, tetapi dapat dikembangkan di masa depan!");
+        function fillPersonalData() {
+            window.location.href = "personal_data.html";
         }
 
         function startDetection() {
