--- a/results.html
+++ b/results.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="result-item">
-                    <img src="bmi.png" alt="BMI" class="result-icon">
+                    <img src="bmi_weight.png" alt="BMI" class="result-icon">
                     <h3>BMI</h3>
                     <p style="text-align: center;">BMI Anda adalah <strong><span id="bmi-display"></span></strong>.</p>
                     <p class="analysis" style="text-align: center;">BMI yang lebih tinggi dapat meningkatkan risiko
